# Avocado

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.sh  .travis.yml  Avocado.sln  Avocado.vcxproj  Avocado.vcxproj.filters  CMakeLists.txt  ISSUE_TEMPLATE.md  README.md  appveyor.yml  avocado  build.sh  format.bat  main.py  main.yml  premake5.lua  python  utils.py  watch-build.sh  watch-run.sh
.appveyor/: notify-discord.ps1
.ci/: deploy.sh
.ci/android/: run-container.sh
.ci/linux/: run-container.sh
.ci/macos/: build.sh  install-dependencies.sh
.ci/windows/: notify-discord.ps1
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: build.yml
.travis/: deploy.sh  notify-discord.sh
.travis/android/: build.sh  pull-container.sh  run-container.sh
.travis/linux/: build.sh  notify-discord.sh  pull-container.sh  run-container.sh
.travis/macos/: build.sh  install-dependencies.sh
android/: .gitignore  avocado.keystore.enc  avocado.keystore.gpg  build.gradle
android/app/: build.gradle
android/app/jni/: Android.mk  Application.mk
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
data/asm/: bootstrap.s  build.sh
data/assets/: gamecontrollerdb.txt
data/shader/: blit.frag  blit.shader  blit.vert  copy.frag  copy.shader  copy.vert  render.frag  render.shader  render.vert
enc_temp_folder/3b2488f73bbf32e3db1cfe0763ad75/: gpu.cpp
misc/: avocado.icns
misc/macos/: Info.plist
premake/: chdr.lua  flac.lua  fmt.lua  glad.lua  imgui.lua  lzma.lua  miniz.lua  sdl2.lua  stb.lua  tools.lua
src/: config.cpp  config.h  cop0.h  gdbStub.cpp  gdbStub.h  gte.cpp  gte.h  main.cpp  mips.cpp  mips.h  mipsInstructions.cpp  mipsInstructions.h  opcode.h  psxExe.h  stdafx.h  system.cpp  system.h  system_tools.cpp  system_tools.h
src/bios/: exe_bootstrap.cpp  exe_bootstrap.h  functions.cpp  functions.h
src/cpu/: cop0.cpp  cop0.h  cpu.cpp  cpu.h  instructions.cpp  instructions.h  opcode.h
src/cpu/gte/: command.h  gte.cpp  gte.h  math.cpp  math.h  opcodes.cpp
src/debugger/: debugger.cpp  debugger.h
src/device/: cache_control.cpp  cache_control.h  cdrom.cpp  cdrom.h  controller.cpp  controller.h  device.h  dma.cpp  dma.h  dma2Channel.h  dma3Channel.h  dma4Channel.h  dma6Channel.h  dmaChannel.cpp  dmaChannel.h  dummy.cpp  dummy.h  expansion2.cpp  expansion2.h  gpu.cpp  gpu.h  interrupt.cpp  interrupt.h  mdec.cpp  mdec.h  memory_control.cpp  memory_control.h  ram_control.cpp  ram_control.h  serial.cpp  serial.h  spu.cpp  spu.h  timer.cpp  timer.h
src/device/cdrom/: cdrom.cpp  cdrom.h  commands.cpp  fifo.h
src/device/controller/: controller.cpp  controller.h  controller_type.h
src/device/controller/peripherals/: abstract_device.cpp  abstract_device.h  analog_controller.cpp  analog_controller.h  digital_controller.cpp  digital_controller.h  freecam_controller.cpp  freecam_controller.h  memory_card.cpp  memory_card.h  mouse.cpp  mouse.h  none.cpp  none.h
src/device/dma/: dma.cpp  dma.h  dma0_channel.cpp  dma0_channel.h  dma1_channel.cpp  dma1_channel.h  dma2_channel.cpp  dma2_channel.h  dma3_channel.cpp  dma3_channel.h  dma4_channel.cpp  dma4_channel.h  dma5_channel.cpp  dma5_channel.h  dma6_channel.cpp  dma6_channel.h  dma_channel.cpp  dma_channel.h
src/device/gpu/: color_depth.cpp  color_depth.h  gpu.cpp  gpu.h  gpu_utils.cpp  math_utils.cpp  math_utils.h  primitive.h  psx_color.cpp  psx_color.h  rectangle.h  registers.h  render.h  render_line.cpp  render_polygon.cpp  render_rectangle.cpp  rendering_mode.h  semi_transparency.h  texture_utils.h
src/device/gpu/render/: dither.cpp  dither.h  render.h  render_debug.cpp  render_line.cpp  render_polygon.cpp  render_rectangle.cpp  render_triangle.cpp  texture_utils.cpp  texture_utils.h
src/device/mdec/: algorithm.cpp  idct.cpp  mdec.cpp  mdec.h  rle.cpp  tables.h  yuv.cpp
src/device/spu/: adsr.cpp  adsr.h  interpolation.cpp  interpolation.h  noise.cpp  noise.h  regs.h  reverb.cpp  reverb.h  sample.h  spu.cpp  spu.h  voice.cpp  voice.h
src/disc/: disc.cpp  disc.h  empty.h  load.cpp  load.h  position.cpp  position.h  subchannel_q.cpp  subchannel_q.h  track.cpp  track.h
src/disc/format/: chd_format.cpp  chd_format.h  cue.cpp  cue.h  cue_parser.cpp  cue_parser.h  ecm.cpp  ecm.h  ecm_parser.cpp  ecm_parser.h
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  imgui_memory_editor.h
src/input/: input_manager.cpp  input_manager.h
src/memory_card/: card_formats.cpp  card_formats.h
src/opengl/: opengl.cpp  opengl.h
src/opengl/shader/: Attribute.cpp  Attribute.h  Program.cpp  Program.h  Shader.cpp  Shader.h
src/platform/headless/: main.cpp
src/platform/null/: README.md
src/platform/null/file/: file.cpp
src/platform/null/sound/: sound.cpp
src/platform/windows/: config.cpp  config.h  config_parser.cpp  config_parser.h  gui.cpp  gui.h  main.cpp
src/platform/windows/file/: file.cpp
src/platform/windows/gui/: debug.cpp  debug_cdrom.cpp  debug_spu.cpp  file.cpp  filesystem.h  gui.cpp  gui.h  images.cpp  images.h  options.cpp  options.h  profiler.cpp  (+6 more)
src/renderer/opengl/: opengl.cpp  opengl.h
src/sound/: adpcm.cpp  adpcm.h  audio_cd.cpp  audio_cd.h  sound.h  tables.cpp  tables.h  wave.cpp  wave.h
src/state/: state.cpp  state.h
src/utils/: address.h  bcd.cpp  bcd.h  cd.h  config_observer.cpp  config_observer.h  event.cpp  event.h  file.cpp  file.h  gameshark.h  gpu_draw_list.cpp  gpu_draw_list.h  json_enum.h  log.cpp  log.h  logger.cpp  logger.h  logic.h  macros.h  math.h  psf.cpp  psf.h  psx_exe.h  screenshot.h  string.cpp  string.h  timing.h  vector.cpp  vector.h
src/utils/cue/: cue.cpp  cue.h  cueParser.cpp  cueParser.h  cue_parser.cpp  cue_parser.h  disk.h  position.cpp  position.h  track.cpp  track.h
src/utils/profiler/: profiler.cpp  profiler.h
tests/: main.cpp
tests/auto/gte/: gte_auto_test.cpp  log_file.cpp  log_file.h
tests/gte/: all.cpp  all_psx.txt  rtps.cpp
tests/unit/: example.cpp  main.cpp
tests/unit/utils/: logic.cpp
(+83 files in other folders)
